# ml

./: .gitignore  README.md  lab1.md  lab2.md  lab3.md  pyproject.toml  实验一_导论.docx
reports/: exp1_report.md  exp2_report.md  exp3_report.md  semeion.arff
src/: __init__.py  bayes.py  exp_1.py  exp_2.py  exp_3.py  knn.py  weka_eval.py
src/utils/: arff_utils.py  io_utils.py  plot_utils.py
