[tool.poetry]
name = "ml-lab1"
version = "0.1.0"
description = "kNN + LOO 实验（numpy + matplotlib），遵循 .cursorrules 规范"
authors = ["you <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"


